WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
99673
Set min-width property instead of width property for date/time fields
https://bugs.webkit.org/show_bug.cgi?id=99673
Summary
Set min-width property instead of width property for date/time fields
Kent Tamura
Reported
2012-10-17 19:25:45 PDT
Set min-width property instead of width property for date/time fields
Attachments
Patch
(59.54 KB, patch)
2012-10-17 19:30 PDT
,
Kent Tamura
no flags
Details
Formatted Diff
Diff
Patch 2
(59.60 KB, patch)
2012-10-18 00:15 PDT
,
Kent Tamura
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Kent Tamura
Comment 1
2012-10-17 19:30:45 PDT
Created
attachment 169324
[details]
Patch
Hajime Morrita
Comment 2
2012-10-18 00:04:46 PDT
Comment on
attachment 169324
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=169324&action=review
> Source/WebCore/ChangeLog:11 > + Tets: Covered by fast/forms/*-multiple-fields/*-multipe-fields-appearance-style.html
s/Tets/Tests
Kent Tamura
Comment 3
2012-10-18 00:15:41 PDT
Created
attachment 169357
[details]
Patch 2 Fixed a typo
WebKit Review Bot
Comment 4
2012-10-18 00:37:03 PDT
Comment on
attachment 169357
[details]
Patch 2 Clearing flags on attachment: 169357 Committed
r131710
: <
http://trac.webkit.org/changeset/131710
>
WebKit Review Bot
Comment 5
2012-10-18 00:37:06 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug