Set min-width property instead of width property for date/time fields https://bugs.webkit.org/show_bug.cgi?id=99673

Reviewed by Hajime Morita.

Source/WebCore:

A field can have a text wider than pre-computed width because of
:first-letter property. So, we should set min-width, not width.

Tests: Covered by fast/forms/*-multiple-fields/*-multipe-fields-appearance-style.html

* html/shadow/DateTimeNumericFieldElement.cpp:
(WebCore::DateTimeNumericFieldElement::customStyleForRenderer):
Set min-width instead of width.
* html/shadow/DateTimeSymbolicFieldElement.cpp:
(WebCore::DateTimeSymbolicFieldElement::customStyleForRenderer): Ditto.

LayoutTests:

Update affected test results. Non-Mac chromium ports already have lines
for them in TestExpectations.

* platform/chromium-mac/fast/forms/date-multiple-fields/date-multiple-fields-appearance-pseudo-elements-expected.png:
* platform/chromium-mac/fast/forms/month-multiple-fields/month-multiple-fields-appearance-pseudo-elements-expected.png:
* platform/chromium-mac/fast/forms/time-multiple-fields/time-multiple-fields-appearance-pseudo-elements-expected.png:


Canonical link: https://commits.webkit.org/117664@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@131710 268f45cc-cd09-0410-ab3c-d52691b4dbfc