Source/WebCore/html/shadow/DateTimeNumericFieldElement.cpp
@@ -82,7 +82,7 @@ PassRefPtr<RenderStyle> DateTimeNumericFieldElement::customStyleForRenderer()
     float maxiumWidth = style->font().width(m_placeholder);
     maxiumWidth = std::max(maxiumWidth, style->font().width(formatValue(maximum())));
     maxiumWidth = std::max(maxiumWidth, style->font().width(value()));
-    style->setWidth(Length(maxiumWidth, Fixed));
+    style->setMinWidth(Length(maxiumWidth, Fixed));
     return style.release();
 }
 
